# via-rs

./: .gitignore  Cargo.toml  Justfile  README.md  katex-header.html
.cargo/: config.toml
.claude/: CLAUDE.md
.github/scripts/: bench_compare_comment.py  bench_regression_comment.py
.github/workflows/: bench-paper.yml  bench-pr.yml  bench.yml  ci.yml  fuzz.yml
crates/via-client/: Cargo.toml
crates/via-client/src/: batch.rs  client.rs  decompose.rs  lib.rs  query.rs
crates/via-estimator/: Cargo.toml
crates/via-estimator/src/: lattice.rs  lib.rs  main.rs  noise.rs
crates/via-integration/: Cargo.toml
crates/via-integration/benches/: pipeline_batch_e2e_paper.rs  pipeline_batch_paper.rs  pipeline_batch_toy.rs  pipeline_paper.rs  pipeline_toy.rs
crates/via-integration/src/: lib.rs
crates/via-integration/tests/: batch_e2e_grid.rs  batch_e2e_paper.rs  batch_e2e_toy.rs  client_server_e2e.rs  client_server_e2e_grid.rs  client_server_e2e_paper.rs  client_server_e2e_secure.rs  layer6_kats.rs
crates/via-integration/tests/data/: layer6_kats.rs  layer7_kats.rs
crates/via-primitives/: Cargo.toml
crates/via-primitives/benches/: kernels.rs
crates/via-primitives/src/: lib.rs  params.rs  test_util.rs
crates/via-primitives/src/algebra/: mod.rs  wide.rs
crates/via-primitives/src/algebra/ring/: abstraction.rs  element.rs  form.rs  mod.rs  ntt.rs  ntt_abstraction.rs  ops.rs  reshape.rs  rns_element.rs  rns_ops.rs  rns_reshape.rs
crates/via-primitives/src/algebra/rns/: basis.rs  element.rs  mod.rs  ops.rs  reduce.rs
crates/via-primitives/src/algebra/zq/: element.rs  mod.rs  modulus.rs  ops.rs  reduce.rs
crates/via-primitives/src/conversion/: cascade.rs  conv.rs  extract.rs  mlwe_ops.rs  mod.rs  repack.rs
crates/via-primitives/src/conversion/kernels/: lwe.rs  mod.rs
crates/via-primitives/src/encryption/: gadget.rs  keyswitch.rs  mlwe.rs  mod.rs  rgsw.rs  rlev.rs  rlwe.rs  types.rs
crates/via-primitives/src/gates/: convert.rs  mod.rs  mux.rs  rotate.rs
crates/via-primitives/src/sampling/: bounded.rs  distribution.rs  gaussian.rs  lift.rs  mod.rs  prg.rs  ternary.rs  uniform.rs
crates/via-primitives/src/switching/: mod.rs  mod_switch.rs  rekey.rs  ring_switch.rs
crates/via-primitives/src/switching/kernels/: mod.rs  mod_switch.rs  rekey.rs
crates/via-primitives/tests/: conversion_noise_secure.rs  dmux_noise_empirical.rs  layer3_kats.rs  layer4_kats.rs  layer5_kats.rs  secure_scaling.rs
crates/via-primitives/tests/data/: layer3_kats.rs  layer4_kats.rs  layer5_kats.rs
crates/via-protocol/: Cargo.toml
crates/via-protocol/src/: error.rs  lib.rs  params.rs  presets.rs  variant.rs
crates/via-protocol/src/wire/: answer.rs  format.rs  keys.rs  mod.rs  query.rs
crates/via-protocol/tests/: protocol_types.rs
crates/via-server/: Cargo.toml
crates/via-server/src/: answer.rs  batch.rs  first_dim.rs  lib.rs  prepared_db.rs  prepared_keys.rs  query_decomp.rs  resp_comp.rs  scheme.rs  setup_db.rs
crates/via-server/tests/: e2e_toy.rs
docs/: architecture.html  audit.html  implementation.html  index.html  intro.html  params-bench.html  params-concrete.html  params-gaps.html  params-primer.html  params.html  style.css
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: ring_centered_repr_ct_match.rs  ring_centered_repr_roundtrip.rs  ring_embed_at_zeroes_other_slots.rs  ring_embed_dfold_roundtrip.rs  ring_embed_iota_zero_homomorphism.rs  ring_embed_roundtrip.rs  ring_embed_slot_isolation.rs  ring_negacyclic_mul.rs  ring_ntt_homomorphism.rs  ring_ntt_roundtrip.rs  ring_ops.rs  ring_rns_const_vs_dyn.rs  ring_rns_embed_roundtrip.rs  ring_rns_negacyclic_mul.rs  ring_rns_ntt_homomorphism.rs  ring_rns_ntt_homomorphism_n32.rs  ring_rns_ntt_roundtrip.rs  ring_rns_ops.rs  ring_rns_rotate.rs  ring_rotate.rs  rns_const_vs_dyn.rs  rns_ops.rs  rns_roundtrip.rs  zq_const_vs_dyn.rs  zq_ops.rs  zq_reduce.rs  zq_roundtrip.rs
fuzz/fuzz_targets/conversion/: cascade_roundtrip.rs  conv_step_roundtrip.rs  embed_d_roundtrip.rs  embed_mlwe_roundtrip.rs  extr_roundtrip.rs  lwe_encrypt_decrypt.rs  repack_roundtrip.rs
fuzz/fuzz_targets/encryption/: external_product_homomorphism.rs  gadget_digit_bounds.rs  gadget_reconstruct_bound.rs  rlwe_roundtrip.rs
fuzz/fuzz_targets/gates/: cmux_dmux_roundtrip.rs  cmux_tree_selection.rs  crot_roundtrip.rs  mod_switch_rgsw_shape.rs  rlwe_to_rgsw_usable.rs
fuzz/fuzz_targets/protocol/: answer_batch_roundtrip.rs  e2e_roundtrip.rs  encrypt_lwe_raw_roundtrip.rs  first_dim_select.rs  resp_comp_roundtrip.rs
fuzz/fuzz_targets/ring/: centered_repr_ct_match.rs  centered_repr_roundtrip.rs  const_vs_dyn.rs  embed_at_zeroes_other_slots.rs  embed_dfold_roundtrip.rs  embed_iota_zero_homomorphism.rs  embed_roundtrip.rs  embed_slot_isolation.rs  negacyclic_mul.rs  ntt_homomorphism.rs  ntt_roundtrip.rs  ops.rs  rns_const_vs_dyn.rs  rns_embed_roundtrip.rs  rns_embed_slot_isolation.rs  rns_negacyclic_mul.rs  rns_ntt_homomorphism.rs  rns_ntt_homomorphism_n32.rs  rns_ntt_roundtrip.rs  rns_ops.rs  rns_rotate.rs  rotate.rs
fuzz/fuzz_targets/rns/: const_vs_dyn.rs  ops.rs  roundtrip.rs  slice_ops.rs
fuzz/fuzz_targets/sampling/: lift_roundtrip.rs  prg_buffer_boundary.rs  uniform_below_range.rs
fuzz/fuzz_targets/switching/: mod_switch_asym_output_shape.rs  mod_switch_sym_roundtrip.rs  rekey_roundtrip.rs  ring_switch_roundtrip.rs
fuzz/fuzz_targets/zq/: const_vs_dyn.rs  ops.rs  pow2_match.rs  reduce.rs  roundtrip.rs
src/: lib.rs
src/algebra/: mod.rs
src/algebra/ring/: abstraction.rs  element.rs  form.rs  ntt.rs  reshape.rs  rns_element.rs  rns_reshape.rs
src/algebra/rns/: basis.rs  mod.rs  ops.rs
src/algebra/zq/: element.rs  modulus.rs
src/conversion/: cascade.rs  extract.rs  mod.rs
src/encryption/: aliases.rs  gadget.rs  mlwe.rs  mod.rs  rlwe.rs  types.rs
src/gates/: mod.rs
src/primitives/: mod.rs
src/sampling/: bounded.rs  distribution.rs  gaussian.rs  lift.rs  mod.rs  prg.rs  ternary.rs  uniform.rs
src/switching/: mod.rs  rekey.rs
tests/: layer3_kats.rs  layer4_kats.rs  layer5_kats.rs
tests/data/: layer3_kats.rs  layer5_kats.rs
(+18 files in other folders)
