# Root Cargo.toml — virtual workspace. No [package] here.
# Each deliverable crate lives under crates/; the fuzz harness remains excluded.

[workspace]
resolver = "2"
members = [
    "crates/via-primitives",
    "crates/via-protocol",
    "crates/via-client",
    "crates/via-server",
    "crates/via-integration",
]
exclude = ["fuzz"]

[workspace.dependencies]
# ---------- external ----------
libm        = { version = "0.2",  default-features = false }
rand_core   = { version = "0.6",  default-features = false }
sha3        = { version = "0.10", default-features = false }
subtle      = { version = "2.6",  default-features = false }
zeroize     = { version = "1.8",  default-features = false, features = ["derive"] }
tracing     = { version = "0.1",  default-features = false }
# Benchmarking (dev-only). `cargo_bench_support` enables the `cargo bench`
# harness + `--save-baseline`/`--baseline` regression comparison; plotting deps
# are dropped (the textual report is what the perf gate uses).
criterion   = { version = "0.5",  default-features = false, features = ["cargo_bench_support"] }

# ---------- internal ----------
via-primitives = { path = "crates/via-primitives",                       version = "0.1.0" }
via-protocol   = { path = "crates/via-protocol",  default-features = false, version = "0.1.0" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
