[package]
name = "via-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# Mark this as its own (empty) workspace so cargo doesn't try to fold it into
# the main crate's workspace. The main Cargo.toml's `workspace.exclude` and
# this empty table together produce a clean separation: the main crate ignores
# fuzz/, and the fuzz crate ignores the main crate.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4", features = ["derive"] }

[dependencies.via-rs]
path = ".."

# Each fuzz target gets its own [[bin]] entry. Targets are grouped on disk by
# the `src/primitives/` module they exercise — `fuzz_targets/{zq,rns,ring}/` —
# but the public `name = "..."` identifier (used by the CI matrix, the
# `just fuzz <name>` recipe, and the libFuzzer corpus directory) keeps the
# original flat scheme so corpora and tooling continue to resolve unchanged.

# §0.1 — Zq scalar arithmetic.

[[bin]]
name = "zq_reduce"
path = "fuzz_targets/zq/reduce.rs"
test = false
doc = false

[[bin]]
name = "zq_ops"
path = "fuzz_targets/zq/ops.rs"
test = false
doc = false

[[bin]]
name = "zq_const_vs_dyn"
path = "fuzz_targets/zq/const_vs_dyn.rs"
test = false
doc = false

[[bin]]
name = "zq_pow2_match"
path = "fuzz_targets/zq/pow2_match.rs"
test = false
doc = false

[[bin]]
name = "zq_roundtrip"
path = "fuzz_targets/zq/roundtrip.rs"
test = false
doc = false

# §0.2 — RNS / double-CRT.

[[bin]]
name = "rns_roundtrip"
path = "fuzz_targets/rns/roundtrip.rs"
test = false
doc = false

[[bin]]
name = "rns_ops"
path = "fuzz_targets/rns/ops.rs"
test = false
doc = false

[[bin]]
name = "rns_const_vs_dyn"
path = "fuzz_targets/rns/const_vs_dyn.rs"
test = false
doc = false

[[bin]]
name = "rns_slice_ops"
path = "fuzz_targets/rns/slice_ops.rs"
test = false
doc = false

# §0.3 — polynomial ring R_{n, q} = Z_q[X] / (X^n + 1).

[[bin]]
name = "ring_negacyclic_mul"
path = "fuzz_targets/ring/negacyclic_mul.rs"
test = false
doc = false

[[bin]]
name = "ring_rotate"
path = "fuzz_targets/ring/rotate.rs"
test = false
doc = false

[[bin]]
name = "ring_ops"
path = "fuzz_targets/ring/ops.rs"
test = false
doc = false

[[bin]]
name = "ring_const_vs_dyn"
path = "fuzz_targets/ring/const_vs_dyn.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_ops"
path = "fuzz_targets/ring/rns_ops.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_negacyclic_mul"
path = "fuzz_targets/ring/rns_negacyclic_mul.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_rotate"
path = "fuzz_targets/ring/rns_rotate.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_const_vs_dyn"
path = "fuzz_targets/ring/rns_const_vs_dyn.rs"
test = false
doc = false

# §0.4 — negacyclic NTT.

[[bin]]
name = "ring_ntt_roundtrip"
path = "fuzz_targets/ring/ntt_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "ring_ntt_homomorphism"
path = "fuzz_targets/ring/ntt_homomorphism.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_ntt_roundtrip"
path = "fuzz_targets/ring/rns_ntt_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_ntt_homomorphism"
path = "fuzz_targets/ring/rns_ntt_homomorphism.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_ntt_homomorphism_n32"
path = "fuzz_targets/ring/rns_ntt_homomorphism_n32.rs"
test = false
doc = false

# §0.5 — ring embedding ι and projection π.

[[bin]]
name = "ring_embed_roundtrip"
path = "fuzz_targets/ring/embed_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "ring_embed_slot_isolation"
path = "fuzz_targets/ring/embed_slot_isolation.rs"
test = false
doc = false

[[bin]]
name = "ring_embed_dfold_roundtrip"
path = "fuzz_targets/ring/embed_dfold_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_embed_roundtrip"
path = "fuzz_targets/ring/rns_embed_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "ring_rns_embed_slot_isolation"
path = "fuzz_targets/ring/rns_embed_slot_isolation.rs"
test = false
doc = false

[[bin]]
name = "ring_embed_iota_zero_homomorphism"
path = "fuzz_targets/ring/embed_iota_zero_homomorphism.rs"
test = false
doc = false

[[bin]]
name = "ring_embed_at_zeroes_other_slots"
path = "fuzz_targets/ring/embed_at_zeroes_other_slots.rs"
test = false
doc = false

# §0.6 — centred / balanced representation.

[[bin]]
name = "ring_centered_repr_roundtrip"
path = "fuzz_targets/ring/centered_repr_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "ring_centered_repr_ct_match"
path = "fuzz_targets/ring/centered_repr_ct_match.rs"
test = false
doc = false

# §1 — sampling.

[[bin]]
name = "sampling_prg_buffer_boundary"
path = "fuzz_targets/sampling/prg_buffer_boundary.rs"
test = false
doc = false

[[bin]]
name = "sampling_uniform_below_range"
path = "fuzz_targets/sampling/uniform_below_range.rs"
test = false
doc = false

[[bin]]
name = "sampling_lift_roundtrip"
path = "fuzz_targets/sampling/lift_roundtrip.rs"
test = false
doc = false

# §2 — encryption.

[[bin]]
name = "encryption_rlwe_roundtrip"
path = "fuzz_targets/encryption/rlwe_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "encryption_gadget_reconstruct_bound"
path = "fuzz_targets/encryption/gadget_reconstruct_bound.rs"
test = false
doc = false

[[bin]]
name = "encryption_gadget_digit_bounds"
path = "fuzz_targets/encryption/gadget_digit_bounds.rs"
test = false
doc = false

[[bin]]
name = "encryption_external_product_homomorphism"
path = "fuzz_targets/encryption/external_product_homomorphism.rs"
test = false
doc = false

# §3 — switching.

[[bin]]
name = "switching_mod_switch_sym_roundtrip"
path = "fuzz_targets/switching/mod_switch_sym_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "switching_mod_switch_asym_output_shape"
path = "fuzz_targets/switching/mod_switch_asym_output_shape.rs"
test = false
doc = false

[[bin]]
name = "switching_ring_switch_roundtrip"
path = "fuzz_targets/switching/ring_switch_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "switching_rekey_roundtrip"
path = "fuzz_targets/switching/rekey_roundtrip.rs"
test = false
doc = false

# §4 — homomorphic gates.

[[bin]]
name = "gates_cmux_dmux_roundtrip"
path = "fuzz_targets/gates/cmux_dmux_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "gates_cmux_tree_selection"
path = "fuzz_targets/gates/cmux_tree_selection.rs"
test = false
doc = false

[[bin]]
name = "gates_crot_roundtrip"
path = "fuzz_targets/gates/crot_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "gates_rlwe_to_rgsw_usable"
path = "fuzz_targets/gates/rlwe_to_rgsw_usable.rs"
test = false
doc = false

[[bin]]
name = "gates_mod_switch_rgsw_shape"
path = "fuzz_targets/gates/mod_switch_rgsw_shape.rs"
test = false
doc = false
