[package]
name        = "via-integration"
version     = "0.1.0"
edition     = "2024"
publish     = false
description  = "Cross-crate integration tests (client ↔ server) for the VIA PIR family."

[dependencies]
# none — the library is doc-only; the tests carry the dependencies.

[dev-dependencies]
via-primitives = { workspace = true, features = ["alloc"] }
via-protocol   = { workspace = true, features = ["alloc"] }
via-client     = { path = "../via-client" }
via-server     = { path = "../via-server" }
criterion      = { workspace = true }

# Per-step + full-pipeline perf benchmarks (see benches/ and `just bench`).
[[bench]]
name    = "pipeline_toy"
harness = false

[[bench]]
name    = "pipeline_paper"
harness = false

[lints]
workspace = true
